Updating the script
I updated the script to make it more clear

--- a/Pendulum Simulation.ipynb
+++ b/Pendulum Simulation.ipynb
@@ -44,22 +44,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forth-order Runge Kutta method\n",
-    "### OED: $$y' = f(x,y),\\ y_0 = f(x_0)$$\n",
-    "### Method:\n",
-    "### $$k_1 = hf(x_i,y_i) \\\\ k_2 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_1) \\\\ k_3 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_2)\\\\ k_4 = hf(x_i + h, y_i + k_3) \\\\ y_{i+1} = y_i + \\frac{1}{6}(k_1 + 2k_2 + 2k_3 + k_4) $$"
+    "### The Systems of Differential Equations that represent the moviment of a simple pendulum in Cartesian coordinates is given for:\n",
+    "#### Note: The Figure of the pendulum is in the local work directory\n",
+    "### $$x' = u$$ \n",
+    "### $$y' = v$$\n",
+    "### $$u' = Tx/mL$$\n",
+    "### $$v' = \\frac{Ty}{mL} - g$$\n",
+    "### $$L^2 = x^2 + y^2 $$\n",
+    "### $$T' = \\frac{3mgv}{L}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Systems of Differential Equations\n",
-    "### $$x' = u$$ \n",
-    "### $$y' = v$$\n",
-    "### $$u' = Tx/mL$$\n",
-    "### $$v' = \\frac{Ty}{mL} - g$$\n",
-    "### $$T' = \\frac{3mgv}{L}$$"
+    "### We're using a numerical method to solve the system of ordinary differential equations. After that, we will assess how the tension in the string, motions, and speed work overtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forth-order Runge Kutta method\n",
+    "### OED: $$y' = f(x,y),\\ y_0 = f(x_0)$$\n",
+    "### Method:\n",
+    "### $$k_1 = hf(x_i,y_i) \\\\ k_2 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_1) \\\\ k_3 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_2)\\\\ k_4 = hf(x_i + h, y_i + k_3) \\\\ y_{i+1} = y_i + \\frac{1}{6}(k_1 + 2k_2 + 2k_3 + k_4) $$"
    ]
   },
   {
@@ -84,10 +93,11 @@
     "def Pendulum(x,y,u,v,T, g = 9.8, L = 1, m = 1):\n",
     "    \"Simple Pendulum simulation\"\n",
     "    \"T: Tension in the string\"\n",
+    "    \"x: position in axe x\"\n",
+    "    \"y: position in axe y\"\n",
     "    \"v:vertical speed\"\n",
     "    \"u: horizontal speed\"\n",
-    "    \"dv: vertical acceleration\"\n",
-    "    \"du: horizontal acceleration\"\n",
+    "    \"note: dx means dx/dt of x(t), derivate of x(t)\"\n",
     "    \"Differencial Equations System:\"\n",
     "    dx = u\n",
     "    dy = v\n",
@@ -96,7 +106,7 @@
     "    dT = (3*g*m*v) / L\n",
     "    return np.array([dx,dy,du,dv,dT])\n",
     "\n",
-    "#Initial Conditions for differencial Equations:\n",
+    "#Initial Conditions for  ordinary differencial Equations (Initial-Value problems for ODE:)\n",
     "X = np.array([L]*n, float)\n",
     "Y = np.array([.0]*n, float)\n",
     "U = np.array([.0]*n, float)\n",
