--- a/Pendulum Simulation.ipynb
+++ b/Pendulum Simulation.ipynb
@@ -68,7 +68,11 @@
     "### Forth-order Runge Kutta method\n",
     "### OED: $$y' = f(x,y),\\ y_0 = f(x_0)$$\n",
     "### Method:\n",
-    "### $$k_1 = hf(x_i,y_i) \\\\ k_2 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_1) \\\\ k_3 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_2)\\\\ k_4 = hf(x_i + h, y_i + k_3) \\\\ y_{i+1} = y_i + \\frac{1}{6}(k_1 + 2k_2 + 2k_3 + k_4) $$"
+    "### $$k_1 = hf(x_i,y_i)$$\n",
+    "### $$ \\\\ k_2 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_1) \\\\ $$\n",
+    "### $$ k_3 = hf(x_i + \\frac{1}{2} h,y_i +\\frac{1}{2}k_2)\\\\ $$\n",
+    "### $$ k_4 = hf(x_i + h, y_i + k_3) \\\\ $$\n",
+    "###  $$ y_{i+1} = y_i + \\frac{1}{6}(k_1 + 2k_2 + 2k_3 + k_4) $$"
    ]
   },
   {
